changed episodes from pages to posts. setups tags and rss.

--- a/tinydatacenter.com-v2/app/resources/templates/md/posts/2018-01-17-daily.md
+++ b/tinydatacenter.com-v2/app/resources/templates/md/posts/2018-01-17-daily.md
@@ -1,6 +1,6 @@
 {:title "Daily Links"
  :layout :post
- :tags  ["daily" "links"]
+ :tags  ["daily-links"]
  :toc false}
 
 * [Rethinking Error Reporting on the FE](https://news.ycombinator.com/item?id=16170583) HN
