--- a/tinydatacenter.com-v2/app/resources/templates/md/posts/2018-01-18-daily.md
+++ b/tinydatacenter.com-v2/app/resources/templates/md/posts/2018-01-18-daily.md
@@ -1,6 +1,6 @@
 {:title "Daily Links"
  :layout :post
- :tags  ["daily" "links"]
+ :tags  ["daily-links"]
  :toc false}
 
 * [There is a way to bypass CDN origin protection, most are vulnurable--with solution](https://news.ycombinator.com/item?id=16177651) HN
