--- a/tinydatacenter.com-v2/app/resources/templates/md/posts/2018-01-19-daily.md
+++ b/tinydatacenter.com-v2/app/resources/templates/md/posts/2018-01-19-daily.md
@@ -1,6 +1,6 @@
 {:title "Daily Links"
  :layout :post
- :tags  ["daily" "links"]
+ :tags  ["daily-links"]
  :toc false}
 
 * [Bootrino.com: Netboot Run-From-RAM OS's on AWS, GCP, etc](https://news.ycombinator.com/item?id=16186756) HN
