--- a/tinydatacenter.com-v2/app/resources/templates/md/posts/2018-02-04-docker.md
+++ b/tinydatacenter.com-v2/app/resources/templates/md/posts/2018-02-04-docker.md
@@ -2,8 +2,7 @@
  :layout :episode
  :video-url "/media/tinydc/docker/out.m3u8"
  :yt-episode-video-id "0S9rePglH2Y"
- :page-index 40
- :navbar? false}
+ :tags ["episode" "episode-wip" "video"]}
 
 
 Docker is a tool that lets people create software packages that can be run on any system that supports Docker and the same processor architecture.
