--- a/tinydatacenter.com-v2/app/resources/templates/md/posts/2018-01-21-daily.md
+++ b/tinydatacenter.com-v2/app/resources/templates/md/posts/2018-01-21-daily.md
@@ -1,6 +1,6 @@
 {:title "Daily Links"
  :layout :post
- :tags  ["daily" "links"]
+ :tags  ["daily-links"]
  :toc false}
 
 * [Block chain from a dist computing perspective](https://news.ycombinator.com/item?id=16191506) HN
