--- a/tinydatacenter.com-v2/app/resources/templates/md/posts/2018-02-04-desktop.md
+++ b/tinydatacenter.com-v2/app/resources/templates/md/posts/2018-02-04-desktop.md
@@ -1,8 +1,7 @@
 {:title "Desktop"
  :layout :yt-episode
  :yt-episode-video-id "crApIVQ5Wqk"
- :page-index 50
- :navbar? false}
+ :tags ["episode" "episode-wip" "video"]}
 
 
 Installing a desktop is a side route and not required for any kind of services, but it's comfortable for people to be able to use a mouse and have a familiar graphical interface to use. It's similar to Mac and Windows, but something different called Linux that is created as free software similar to the methodology used to create this set of tutorials.
