updated episodes to use common template for regular or YT video. added u2f draft

--- a/tinydatacenter.com-v2/app/resources/templates/md/posts/2018-02-04-desktop.md
+++ b/tinydatacenter.com-v2/app/resources/templates/md/posts/2018-02-04-desktop.md
@@ -1,6 +1,6 @@
 {:title "Desktop"
- :layout :yt-episode
- :yt-episode-video-id "crApIVQ5Wqk"
+ :layout :episode
+ :episode-yt-video-id "crApIVQ5Wqk"
  :tags ["episode" "episode-wip" "video"]}
 
 
