--- a/tinydatacenter.com-v2/app/resources/templates/md/posts/2018-02-04-docker.md
+++ b/tinydatacenter.com-v2/app/resources/templates/md/posts/2018-02-04-docker.md
@@ -1,7 +1,7 @@
 {:title "Docker"
  :layout :episode
  :video-url "/media/tinydc/docker/out.m3u8"
- :yt-episode-video-id "0S9rePglH2Y"
+ :episode-yt-video-id "0S9rePglH2Y"
  :tags ["episode" "episode-wip" "video"]}
 
 
