--- a/tinydatacenter.com-v2/app/resources/templates/md/posts/2018-03-06-dev-box.md
+++ b/tinydatacenter.com-v2/app/resources/templates/md/posts/2018-03-06-dev-box.md
@@ -1,11 +1,16 @@
 {:title "Dev Box (Development Machine)"
- :layout :yt-episode
- :tags ["episode-wip" "video"]
- :video-url "/media/tinydc/docker/out.m3u8"
- :yt-episode-video-id "0S9rePglH2Y"}
+ :layout :episode
+ :tags ["episode-wip"]}
 
 
 Use box as a development machine. Local with an X session, remote via SSH. Token auth useful. Networked storage useful.
 
 Dev pipeline with Docker repo. How that fits in with POSSE.
 
+1. Setup docker registry
+
+2. Configure other machines to use docker registry
+
+3. Simplify DNS issues with /etc/hosts
+
+4. Maybe someday add a DNS server
